include_HEADERS = \
	libvmdk.h

pkginclude_HEADERS = \
	libvmdk/codepage.h \
	libvmdk/definitions.h \
	libvmdk/error.h \
	libvmdk/extern.h \
	libvmdk/features.h \
	libvmdk/types.h

EXTRA_DIST = \
	libvmdk.h.in \
	libvmdk/definitions.h.in \
	libvmdk/features.h.in \
	libvmdk/types.h.in

DISTCLEANFILES = \
	libvmdk.h \
	libvmdk/definitions.h \
	libvmdk/features.h \
	libvmdk/types.h \
	Makefile \
	Makefile.in

