EXTRA_DIST = \
	libvmdk.pmdoc/01bin.xml.in \
	libvmdk.pmdoc/01bin-contents.xml \
	libvmdk.pmdoc/02include.xml.in \
	libvmdk.pmdoc/02include-contents.xml \
	libvmdk.pmdoc/03lib.xml.in \
	libvmdk.pmdoc/03lib-contents.xml \
	libvmdk.pmdoc/04share.xml.in \
	libvmdk.pmdoc/04share-contents.xml \
	libvmdk.pmdoc/05python.xml.in \
	libvmdk.pmdoc/05python-contents.xml \
	libvmdk.pmdoc/index.xml \
	libvmdk.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libvmdk.pmdoc/01bin.xml
	/bin/rm -f libvmdk.pmdoc/02include.xml
	/bin/rm -f libvmdk.pmdoc/03lib.xml
	/bin/rm -f libvmdk.pmdoc/04share.xml
	/bin/rm -f libvmdk.pmdoc/05python.xml
	/bin/rm -f libvmdk.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

