MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libvmdk/libvmdk.vcproj \
	pyvmdk/pyvmdk.vcproj \
	vmdk_test_error/vmdk_test_error.vcproj \
	vmdk_test_extent_descriptor/vmdk_test_extent_descriptor.vcproj \
	vmdk_test_handle/vmdk_test_handle.vcproj \
	vmdk_test_notify/vmdk_test_notify.vcproj \
	vmdk_test_open_close/vmdk_test_open_close.vcproj \
	vmdk_test_read/vmdk_test_read.vcproj \
	vmdk_test_seek/vmdk_test_seek.vcproj \
	vmdk_test_support/vmdk_test_support.vcproj \
	vmdkinfo/vmdkinfo.vcproj \
	vmdkmount/vmdkmount.vcproj \
	zlib/zlib.vcproj \
	libvmdk.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

