MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libvmdk/libvmdk.vcproj \
	pyvmdk/pyvmdk.vcproj \
	vmdk_test_deflate/vmdk_test_deflate.vcproj \
	vmdk_test_descriptor_file/vmdk_test_descriptor_file.vcproj \
	vmdk_test_error/vmdk_test_error.vcproj \
	vmdk_test_extent_descriptor/vmdk_test_extent_descriptor.vcproj \
	vmdk_test_extent_file/vmdk_test_extent_file.vcproj \
	vmdk_test_extent_table/vmdk_test_extent_table.vcproj \
	vmdk_test_grain_data/vmdk_test_grain_data.vcproj \
	vmdk_test_grain_group/vmdk_test_grain_group.vcproj \
	vmdk_test_grain_table/vmdk_test_grain_table.vcproj \
	vmdk_test_handle/vmdk_test_handle.vcproj \
	vmdk_test_io_handle/vmdk_test_io_handle.vcproj \
	vmdk_test_notify/vmdk_test_notify.vcproj \
	vmdk_test_support/vmdk_test_support.vcproj \
	vmdk_test_tools_info_handle/vmdk_test_tools_info_handle.vcproj \
	vmdk_test_tools_output/vmdk_test_tools_output.vcproj \
	vmdk_test_tools_signal/vmdk_test_tools_signal.vcproj \
	vmdkinfo/vmdkinfo.vcproj \
	vmdkmount/vmdkmount.vcproj \
	zlib/zlib.vcproj \
	libvmdk.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

